src/components/H2HNavBar/H2HNavBar.module.css
.group-navigation-bar {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 1.6rem 1.6rem;
  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 0%, rgba(15, 15, 15, 0.8) 42.71%);
}
.previous-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 6.4rem;
  height: 6.4rem;
  border-radius: 50%;
  background-color: var(--darkgrey);
  border: none;
}
.previous-btn:hover {
  cursor: pointer;
}
.next-btn {
  font-size: 2rem;
  line-height: 2.4rem;
  background-color: var(--white);
  padding: 2rem 3.3rem;
  border-radius: 9rem;
  border: none;
}
.next-btn:hover {
  cursor: pointer;
}

